# expense-tracker-python

./: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
src/: index.py
src/adapters/: base.py  historical_portfolio.py  portfolio.py  stock.py
src/adapters/repositories/stock/: base.py  stock.py
src/domain/: enum.py  historical_portfolio.py  portfolio.py  stock.py
src/handler/: stock.py
src/proto/: stock.proto  stock_pb2.py  stock_pb2_grpc.py
src/tests/: test_historical_portfolio_adapters.py  test_portfolio_adapters.py  test_stock_adapters.py  test_stock_handler.py  test_stock_usecase.py
src/tests/adapters/repositories/: test_stock.py
src/usecase/: base.py  stock.py
src/usecase/stock/: base.py  stock.py
src/utils/: utils.py
tools/protoc/: dockerfile  gen-protoc.sh
tools/tests/: run_tests.sh  wait_for_mongo.py
