[project]
name = "expense-tracker-python"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astunparse==1.6.3",
    "cel-python==0.2.0",
    "certifi==2025.4.26",
    "grpcio==1.71.0",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "lark==0.12.0",
    "markupsafe==3.0.2",
    "polygon-api-client==1.14.5",
    "protobuf==5.29.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "six==1.17.0",
    "types-python-dateutil==2.9.0.20241206",
    "types-pyyaml==6.0.12.20250402",
    "urllib3==2.4.0",
    "validate-email==1.3",
    "websockets==14.2",
]
